refact : 테스트코드 리뷰 반영